1.1.0

- Tooltip now anchor to the bottom right of the Tooltip mover frame
- Added custom mainmenu
- Added custom loot frame

1.0.0

- Added Character Panel
- Added Talent Panel
- Added Spellbook
- Added level to QuestTracker
- Added back Searchbar to bag and bank
- Added Welcome- and Changelog Page
- Added TitanClassic Support (MultiBarRight should not move a bit down)
- Fix MultiBarLeft and Right finally (also when get attack in stealth)
- Added back Chatwindow
- Added back Dynamic-Cam Mode
- Change debuff position on target and player if target/player has no buffs
- Update locals (zhTW, ptBR)
- Update Aura Indicator for raidframes
- Added enemy buffs on targetframe
- Added itemborder for professionbags
- Added back Health option to raidframes
- Added HealPrediction for Raidframes: Used libHealComm - Works only if all others has also this lib installed and setup

0.9.1

- Added support for GatherLite after there Update
- Added "Color level number"
- Added Pixel Perfection-Mode
- Fix a bug in Immersice Questing
- Hide default Bliizard PetBarFrame
- Fix position of exp bar

0.9.0

- Fix combopoint position under target if target is casting
- Added custom border for raidbosses
- Added ability to seperate MultiBarLeft and MultiBarRight
- Fixed an error in Immersive Questing
- Fixed an error where the MultiBarLeft and MultiBarRight change the size if you attack from stealth
- Support QuestGuru
- Change QuestTracker click actions:    RClick to close quest log if open
                                        Shift + LClick to link quest name in currently open chat
                                        Shift + RClick to link quest objects and progress in currently open chat
                                        Ctrl + Click to untrack the quest

0.8.0

- Added ability to hook combopoints to the traget frame
- Added back Immersive Questing
- Added back Questtracker
- Added all tracking icons
- Fix some bugs

0.7.0

- Added SharedMedia (Font, Background, Statusbar)