@@ -96,6 +96,7 @@ GW_CHANGELOGS = "1.0.0\n\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "- Tooltip now anchor to the bottom right of the Tooltip mover frame\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "- Added custom mainmenu\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "- Added custom loot frame\n" .. GW_CHANGELOGS
+GW_CHANGELOGS = "- Added custom staticpopup\n" .. GW_CHANGELOGS
 GW_CHANGELOGS = "1.1.0\n\n" .. GW_CHANGELOGS
 
 GW.GW_CHANGELOGS = GW_CHANGELOGS
