@@ -3,6 +3,7 @@
 - Tooltip now anchor to the bottom right of the Tooltip mover frame
 - Added custom mainmenu
 - Added custom loot frame
+- Addes custom staticpopup
 
 1.0.0
 
